Agregados modulos manejo de sesiones + usuarios (en desarrollo)

--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -1,28 +1,46 @@
 {
   "Welcome": "Bienvenido",
   "A brand new app.": "Una nueva aplicación.",
+  "login.contrasenaLabel": "Contraseña",
+  "login.usuarioLabel": "Usuario",
+  "login.noUsername": "No se ingresó un nombre de usuario",
+  "login.codigoLabel": "Ingrese el código de acceso",
+  "login.claveLabel": "Ingrese su clave de acceso",
+  "login.submitBtn": "Ingresar",
+  "login.queryError": "Error al intentar ingresar. Inténtelo más tarde",
+  "login.noPassword": "No se ingresó ninguna contraseña",
+  "login.wrongParams": "Los datos de ingreso son incorrectos. Verifíquelos y vuelva a intentar",
+  "navbar.salir": "Salir",
+  "navbar.cerrarSesion": "Cerrar sesión",
+  "navbar.irTransmision": "Ir a la transmisión",
+  "navbar.irHome": "Inicio",
+  "navbar.gestionUsuarios": "Gestionar usuarios",
+  "usuario.noAutenticado": "Debe ingresar a su cuenta para realizar dicha acción",
+  "usuario.bienvenida": "Bienvenido, {{username}}",
+  "usuario.areaNotAuthorized": "No tiene los permisos para ingresar a esta área",
+
+  "usuarios.listado": "Listado de usuarios",
+  "usuarios.errorEditar":"Error ingresar a edición de usuario",
+  "usuarios.errorListar": "Error al listar los usuarios. Inténtelo más tarde",
+  "usuarios.nombre": "Nombre",
+  "usuarios.apellido": "Apellido",
+  "usuarios.username": "Nombre de usuario",
+  "usuarios.email": "Email",
+  "usuarios.contrasena": "Contraseña",
+  "usuarios.niveles": "Nivel de permisos",
+  "usuarios.niveles.standardLevel":"Espectador",
+  "usuarios.niveles.superAdminLevel": "Administrador",
+  "usuarios.niveles.panelLevel": "Operario",
+  "usuarios.autogenerado":"Nombre generado automáticamente",
+  "usuarios.generateEvery":"Generar cada",
 
 
-  "login.contrasenaLabel":"Contraseña",
-  "login.usuarioLabel":"Usuario",
-  "login.noUsername":"No se ingresó un nombre de usuario",
-  "login.codigoLabel":"Ingrese el código de acceso",
-  "login.claveLabel":"Ingrese su clave de acceso",
-  "login.submitBtn":"Ingresar",
-  "login.queryError":"Error al intentar ingresar. Inténtelo más tarde",
-  "login.noPassword":"No se ingresó ninguna contraseña",
-  "login.wrongParams":"Los datos de ingreso son incorrectos. Verifíquelos y vuelva a intentar",
-
-  "navbar.salir":"Salir",
-  "navbar.cerrarSesion":"Cerrar sesión",
-  "navbar.irTransmision":"Ir a la transmisión",
-  "navbar.irHome":"Inicio",
-  "navbar.gestionUsuarios":"Gestionar usuarios",
-
-  "usuario.noAutenticado":"Debe ingresar a su cuenta para realizar dicha acción",
-  "usuario.bienvenida":"Bienvenido, {{username}}",
-
-  "usuarios.listado":"Listado de usuarios",
-  "usuarios.errorListar":"Error al listar los usuarios. Inténtelo más tarde"
-
+  "editar":"Editar",
+  "lun":"Lunes",
+  "mar":"Martes",
+  "mie":"Miércoles",
+  "jue":"Jueves",
+  "vie":"Viernes",
+  "sab":"Sábado",
+  "dom":"Domingo"
 }
