Agregados modulos manejo de sesiones + usuarios (en desarrollo)

--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -18,6 +18,7 @@
   "usuario.noAutenticado": "Debe ingresar a su cuenta para realizar dicha acción",
   "usuario.bienvenida": "Bienvenido, {{username}}",
   "usuario.areaNotAuthorized": "No tiene los permisos para ingresar a esta área",
+  "usuario.shouldBeLessLevel":"No puede crear o editar un usuario con permisos menores o iguales a los suyos",
 
   "usuarios.listado": "Listado de usuarios",
   "usuarios.errorEditar":"Error ingresar a edición de usuario",
@@ -31,9 +32,15 @@
   "usuarios.niveles.standardLevel":"Espectador",
   "usuarios.niveles.superAdminLevel": "Administrador",
   "usuarios.niveles.panelLevel": "Operario",
+  "usuarios.niveles.testLevel": "Test",
   "usuarios.autogenerado":"Nombre generado automáticamente",
   "usuarios.generateEvery":"Generar cada",
-  "usuarios.cantDeleteSelf":"No puede eliminar su usuario",
+  "usuarios.cantDeleteSelf":"No puede realizar dicha acción con su usuario",
+  "usuarios.seleccionarTodo":"Seleccionar todos los dias",
+  "usuarios.deseleccionarTodo":"Deseleccionar todo",
+  "usuarios.resetear":"Resetear",
+  "usuarios.diaABuscar":"Día a buscar...",
+  "usuarios.nadaSeleccionado":"Ningun día seleccionado",
 
   "eliminar":"Eliminar",
   "editar":"Editar",
