--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -42,6 +42,8 @@
   "usuarios.diaABuscar":"Día a buscar...",
   "usuarios.nadaSeleccionado":"Ningun día seleccionado",
 
+  "stream.noUrl":"No se especifico la url de la transmisión",
+
   "eliminar":"Eliminar",
   "editar":"Editar",
   "lun":"Lunes",
