Agregados modulos manejo de sesiones + usuarios (en desarrollo)

--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -52,5 +52,7 @@
   "jue":"Jueves",
   "vie":"Viernes",
   "sab":"Sábado",
-  "dom":"Domingo"
+  "dom":"Domingo",
+
+  "transmision.titulo":"Transmisión en vivo..."
 }
