--- a/config/locales/es.json
+++ b/config/locales/es.json
@@ -103,6 +103,7 @@
   "titulo":"Título",
   "chat.sinUsuarios":"Ningún usuario conectado",
   "chat.writePlaceholder":"Escriba un mensaje...",
+  "chat.onlineContacts":"Usuarios en línea",
 
 
   "areYouSure":"¿Está seguro?"
